sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:10: error: type mismatch;
 found   : Int(9)
 required: Boolean
			if (ecart == 10 || 9) {ecart=11}
                                           ^