sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
var ecart = getNombreValeurs();
var change = true;

	do {
		change = false;
		if (ecart>1) {
			ecart = (ecart.toDouble / 1.3).toInt;
			if (ecart == 10 || 9) {ecart=11}

		}
		var i=0;
		while (i+ecart< getNombreValeurs()) { 
			if (!plusPetit(i,i+ecart)) {
			echange(i,i+ecart);
			change=true;
			
			}
			i=i+1;
		}

		
		
	} while (ecart>1 || change)

	

}
